--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,37 +13,37 @@ jobs:
     steps:
       # install node and checkout code
       - node/install:
-          node-version: '14.15'         
+          node-version: "14.15"
       - checkout
       # Use root level package.json to install dependencies in the frontend app
       - run:
           name: Install Front-End Dependencies
           command: |
-            echo "NODE --version" 
+            echo "NODE --version"
             echo $(node --version)
-            echo "NPM --version" 
+            echo "NPM --version"
             echo $(npm --version)
             npm run frontend:install
-      # TODO: Install dependencies in the the backend API          
+      # TODO: Install dependencies in the the backend API
       - run:
           name: Install API Dependencies
           command: |
-           echo "TODO: Install dependencies in the the backend API  "
+            npm run api:install
       # TODO: Lint the frontend
       - run:
           name: Front-End Lint
           command: |
-            echo "TODO: Lint the frontend"
+            npm run frontend:lint
       # TODO: Build the frontend app
       - run:
           name: Front-End Build
           command: |
-            echo "TODO: Build the frontend app"
-      # TODO: Build the backend API      
+            npm run frontend:build
+      # TODO: Build the backend API
       - run:
           name: API Build
           command: |
-            echo "TODO: Build the backend API"
+            npm run api:build
   # deploy step will run only after manual approval
   deploy:
     docker:
@@ -51,28 +51,33 @@ jobs:
       # more setup needed for aws, node, elastic beanstalk
     steps:
       - node/install:
-          node-version: '14.15' 
+          node-version: "14.15"
       - eb/setup
       - aws-cli/setup
       - checkout
+      # Send env variables to elastic beanstalk
+      - run:
+          name: Set env variables
+          command: |
+            cd udagram/udagram-api
+            eb setenv  POSTGRES_USERNAME=${POSTGRES_USERNAME}  POSTGRES_PASSWORD=${POSTGRES_PASSWORD}  POSTGRES_HOST=${POSTGRES_HOST}  POSTGRES_DB=${POSTGRES_DB}  AWS_BUCKET=${AWS_BUCKET}  AWS_REGION=${AWS_REGION}  AWS_PROFILE=${AWS_PROFILE}  JWT_SECRET=${JWT_SECRET}  AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}  AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}  AWS_SESSION_TOKEN=${AWS_SESSION_TOKEN}
       - run:
           name: Deploy App
           # TODO: Install, build, deploy in both apps
           command: |
-            echo "# TODO: Install, build, deploy in both apps"
-            
+            npm run deploy
 workflows:
   udagram:
     jobs:
       - build
-      - hold:
-          filters:
-            branches:
-              only:
-                - master
-          type: approval
-          requires:
-            - build
+      # - hold:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - feature/update-source
+      #     type: approval
+      #     requires:
+      #       - build
       - deploy:
           requires:
             - hold
