update link project

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,14 +70,14 @@ workflows:
   udagram:
     jobs:
       - build
-      # - hold:
-      #     filters:
-      #       branches:
-      #         only:
-      #           - feature/update-source
-      #     type: approval
-      #     requires:
-      #       - build
+      - hold:
+          filters:
+            branches:
+              only:
+                - master
+          type: approval
+          requires:
+            - build
       - deploy:
           requires:
             - build
